--- a/templates/test.html
+++ b/templates/test.html
@@ -6,5 +6,6 @@
             This is a header
         </h1>
         <p>this is a paragraph</p>
+        <p>this is second  paragraph</p>
     </body>
 </html>
